--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Jylhä Racing</title>
-
-    <meta name="description" content="Jylhä Racing - Moottoriurheilua suurella sydämmellä" />
+    
+    <title>Jylhä Racing - moottoriurheilua suurella sydämellä</title>
+    <meta name="description" content="Tutustu tiimiin, katso kuvia kisoista ja näe ketkä meitä tukevat." />
     <meta name="author" content="Jylhä Racing" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
@@ -14,29 +14,28 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
 
+    <link rel="preload" as="image" href="/assets/images/Hero/hero.jpg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Lobster&family=Racing+Sans+One&display=swap" rel="stylesheet">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Anton&family=Orbitron:wght@900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap" rel="stylesheet" />
 
-    <meta property="og:title" content="Jylhä Racing" />
-    <meta property="og:description" content="Jylhä Racing - Moottoriurheilua suurella sydämmellä" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Jylhä Racing - moottoriurheilua suurella sydämellä" />
+    <meta property="og:description" content="Tutustu tiimiin, katso kuvia kisoista ja näe ketkä meitä tukevat." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.jylharacing.fi" />
     <meta property="og:image" content="/apple-touch-icon.png" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Jylhä Racing" />
-    <meta name="twitter:description" content="Jylhä Racing - Moottoriurheilua suurella sydämmellä" />
+    <meta name="twitter:title" content="Jylhä Racing - moottoriurheilua suurella sydämellä" />
+    <meta name="twitter:description" content="Tutustu tiimiin, katso kuvia kisoista ja näe ketkä meitä tukevat." />
     <meta name="twitter:image" content="/apple-touch-icon.png" />
 
+    <!-- Cache control -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-
   </head>
   <body>
     <div id="root"></div>
