pinnattu admin viesti ja LCP

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
 
-    <link rel="canonical" href="https://www.jylharacing.fi/">
+    <link rel="canonical" href="https://www.jylharacing.fi/" />
     <link rel="preload" as="image" href="/assets/images/Hero/hero.jpg" />
+
+    <!-- Fontit -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap" />
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap" rel="stylesheet" />
 
     <!-- Open Graph / Facebook -->
@@ -32,11 +35,6 @@
     <meta name="twitter:title" content="Jylhä Racing - moottoriurheilua suurella sydämellä" />
     <meta name="twitter:description" content="Tutustu tiimiin, katso kuvia kisoista ja näe ketkä meitä tukevat." />
     <meta name="twitter:image" content="/apple-touch-icon.png" />
-
-    <!-- Cache control -->
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
   </head>
   <body>
     <div id="root"></div>
