--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="/site.webmanifest" />
 
     <link rel="canonical" href="https://www.jylharacing.fi/" />
-    <link rel="preload" as="image" href="/assets/images/Hero/hero.jpg" />
+    <link rel="preload" as="image" href="/assets/images/Hero/hero.webp" fetchpriority="high" />
 
     <!-- Fontit -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
