--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
 
-    <link rel="canonical" href="https://www.jylharacing.fi/" />
+    <link rel="canonical" href="https://jylharacing.fi/" />
 
     <!-- Fontit -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
