--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
     <title>Jylhä Racing - moottoriurheilua suurella sydämellä</title>
-    <meta name="description" content="Tutustu tiimiin, katso kuvia kisoista ja näe ketkä meitä tukevat." />
+    <meta name="description" content="Elä kisojen sykkeessä Jylhä Racingin mukana! Tutustu tiimiimme, selaa kuvagalleriaa, löydä tukijamme tai ota yhteyttä!" />
     <meta name="author" content="Jylhä Racing" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
@@ -24,7 +24,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Jylhä Racing - moottoriurheilua suurella sydämellä" />
-    <meta property="og:description" content="Tutustu tiimiin, katso kuvia kisoista ja näe ketkä meitä tukevat." />
+    <meta property="og:description" content="Elä kisojen sykkeessä Jylhä Racingin mukana! Tutustu tiimiimme, selaa kuvagalleriaa, löydä tukijamme tai ota yhteyttä!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.jylharacing.fi" />
     <meta property="og:image" content="/apple-touch-icon.png" />
@@ -32,7 +32,7 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Jylhä Racing - moottoriurheilua suurella sydämellä" />
-    <meta name="twitter:description" content="Tutustu tiimiin, katso kuvia kisoista ja näe ketkä meitä tukevat." />
+    <meta name="twitter:description" content="Elä kisojen sykkeessä Jylhä Racingin mukana! Tutustu tiimiimme, selaa kuvagalleriaa, löydä tukijamme tai ota yhteyttä!" />
     <meta name="twitter:image" content="/apple-touch-icon.png" />
   </head>
   <body>
