--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
     <title>Jylhä Racing - moottoriurheilua suurella sydämellä</title>
-    <meta name="description" content="Elä kisojen sykkeessä Jylhä Racingin mukana! Tutustu tiimiimme, selaa kuvagalleriaa, löydä tukijamme tai ota yhteyttä!" />
+    <meta name="description" content="Elä kisojen sykkeessä Jylhä Racingin mukana! Tutustu tiimiin, selaa kuvagalleriaa, löydä tukijamme tai ota yhteyttä. Tervetuloa!" />
     <meta name="author" content="Jylhä Racing" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/logo-apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo-favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/logo-favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
 
     <link rel="canonical" href="https://jylharacing.fi/" />
@@ -24,16 +24,16 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Jylhä Racing - moottoriurheilua suurella sydämellä" />
-    <meta property="og:description" content="Elä kisojen sykkeessä Jylhä Racingin mukana! Tutustu tiimiimme, selaa kuvagalleriaa, löydä tukijamme tai ota yhteyttä!" />
+    <meta property="og:description" content="Elä kisojen sykkeessä Jylhä Racingin mukana! Tutustu tiimiin, selaa kuvagalleriaa, löydä tukijamme tai ota yhteyttä. Tervetuloa!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.jylharacing.fi" />
-    <meta property="og:image" content="/apple-touch-icon.png" />
+    <meta property="og:image" content="/logo-apple-touch-icon.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Jylhä Racing - moottoriurheilua suurella sydämellä" />
-    <meta name="twitter:description" content="Elä kisojen sykkeessä Jylhä Racingin mukana! Tutustu tiimiimme, selaa kuvagalleriaa, löydä tukijamme tai ota yhteyttä!" />
-    <meta name="twitter:image" content="/apple-touch-icon.png" />
+    <meta name="twitter:description" content="Elä kisojen sykkeessä Jylhä Racingin mukana! Tutustu tiimiin, selaa kuvagalleriaa, löydä tukijamme tai ota yhteyttä. Tervetuloa!" />
+    <meta name="twitter:image" content="/logo-apple-touch-icon" />
   </head>
   <body>
     <div id="root"></div>
