--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <meta name="description" content="Elä kisojen sykkeessä Jylhä Racingin mukana! Tutustu tiimiin, selaa kuvagalleriaa, löydä tukijamme tai ota yhteyttä. Tervetuloa!" />
     <meta name="author" content="Jylhä Racing" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/logo-apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/logo-favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/logo-favicon-16x16.png" />
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Jylhä Racing" />
     <link rel="manifest" href="/site.webmanifest" />
 
     <link rel="canonical" href="https://jylharacing.fi/" />
@@ -27,13 +29,13 @@
     <meta property="og:description" content="Elä kisojen sykkeessä Jylhä Racingin mukana! Tutustu tiimiin, selaa kuvagalleriaa, löydä tukijamme tai ota yhteyttä. Tervetuloa!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.jylharacing.fi" />
-    <meta property="og:image" content="/logo-apple-touch-icon.png" />
+    <meta property="og:image" content="/apple-touch-icon.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Jylhä Racing - moottoriurheilua suurella sydämellä" />
     <meta name="twitter:description" content="Elä kisojen sykkeessä Jylhä Racingin mukana! Tutustu tiimiin, selaa kuvagalleriaa, löydä tukijamme tai ota yhteyttä. Tervetuloa!" />
-    <meta name="twitter:image" content="/logo-apple-touch-icon" />
+    <meta name="twitter:image" content="/apple-touch-icon.png" />
   </head>
   <body>
     <div id="root"></div>
