--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <meta name="description" content="Elä kisojen sykkeessä Jylhä Racingin mukana! Tutustu tiimiin, selaa kuvagalleriaa, löydä tukijamme tai ota yhteyttä. Tervetuloa!" />
     <meta name="author" content="Jylhä Racing" />
 
-    <link rel="icon" type="image/png" href="/assets/favicon-96x96-CxquzqQ3.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon-BzqLBrin.svg" />
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="Jylhä Racing" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="manifest" href="/site.webmanifest" />
+    <meta name="apple-mobile-web-app-title" content="Jylhä Racing" />
 
     <link rel="canonical" href="https://jylharacing.fi/" />
 
@@ -29,7 +32,7 @@
     <meta property="og:description" content="Elä kisojen sykkeessä Jylhä Racingin mukana! Tutustu tiimiin, selaa kuvagalleriaa, löydä tukijamme tai ota yhteyttä. Tervetuloa!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.jylharacing.fi" />
-  
+    <meta property="og:image" content="/apple-touch-icon.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
