--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="author" content="Jylhä Racing" />
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-new.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192-new.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512-new.png" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="apple-mobile-web-app-title" content="Jylhä Racing" />
@@ -32,13 +32,13 @@
     <meta property="og:description" content="Elä kisojen sykkeessä Jylhä Racingin mukana! Tutustu tiimiin, selaa kuvagalleriaa, löydä tukijamme tai ota yhteyttä. Tervetuloa!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.jylharacing.fi" />
-
+    <meta property="og:image" content="/apple-touch-icon-new.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Jylhä Racing - moottoriurheilua suurella sydämellä" />
     <meta name="twitter:description" content="Elä kisojen sykkeessä Jylhä Racingin mukana! Tutustu tiimiin, selaa kuvagalleriaa, löydä tukijamme tai ota yhteyttä. Tervetuloa!" />
-
+    <meta name="twitter:image" content="/apple-touch-icon-new.png" />
   </head>
   <body>
     <div id="root"></div>
