--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta name="author" content="Jylhä Racing" />
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png" />
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/public/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/publicfavicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/public/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/public/android-chrome-512x512.png" />
+    <link rel="shortcut icon" href="/public/favicon.ico" />
+    <link rel="manifest" href="/public/site.webmanifest" />
     <meta name="apple-mobile-web-app-title" content="Jylhä Racing" />
 
     <link rel="canonical" href="https://jylharacing.fi/" />
@@ -32,13 +32,13 @@
     <meta property="og:description" content="Elä kisojen sykkeessä Jylhä Racingin mukana! Tutustu tiimiin, selaa kuvagalleriaa, löydä tukijamme tai ota yhteyttä. Tervetuloa!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.jylharacing.fi" />
-    <meta property="og:image" content="/apple-touch-icon.png" />
+    <meta property="og:image" content="/public/apple-touch-icon.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Jylhä Racing - moottoriurheilua suurella sydämellä" />
     <meta name="twitter:description" content="Elä kisojen sykkeessä Jylhä Racingin mukana! Tutustu tiimiin, selaa kuvagalleriaa, löydä tukijamme tai ota yhteyttä. Tervetuloa!" />
-    <meta name="twitter:image" content="/apple-touch-icon.png" />
+    <meta name="twitter:image" content="/public/apple-touch-icon.png" />
   </head>
   <body>
     <div id="root"></div>
