--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon-D5m5ck7a.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32-BoGT_8SW.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16-C9TZk8dV.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/publicfavicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="/assets/android-chrome-192x192-BOLck8EB.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="/assets/android-chrome-512x512-C-vYtZ38.png" />
     <link rel="shortcut icon" href="/assets/favicon-C2nuyAqj.ico" />
